@startuml Overview
package config{

}
package growth_cone{
    class GrowthCone
}
package potential_calculation{
    
}
package result{
    class Result
}
package object_factory{
    
}
package simulation{
    class Simulation
}
package substrate{
    class Substrate
}
package visualization{

}

config <-- object_factory :  uses
object_factory --> GrowthCone : creates
object_factory --> Substrate : creates
object_factory -> Simulation : creates
Simulation --> potential_calculation : uses
Simulation ---> Result : creates 
Result <-- visualization : visualizes
Substrate <-- visualization : visualizes

Simulation *--- Substrate 
Simulation *--- GrowthCone

@enduml

@startuml Substrate
package substrate{
    abstract class BaseSubstrate
    abstract class BaseStripeSubstrate
    abstract class BaseGapSubstrate
    class ContinuousGradientSubstrate
    class WedgeSubstrate
    class StripeFwdSubstrate
    class StripeRewSubstrate
    class StripeDuoSubstrate
    class GapSubstrateRR
    class GapSubstrateRB
    class GapSubstrateBR
    class GapSubstrateBB
    class GapSubstrateInverted
}

BaseStripeSubstrate --> StripeDuoSubstrate
BaseStripeSubstrate --> StripeRewSubstrate
BaseStripeSubstrate --> StripeFwdSubstrate

BaseSubstrate --> BaseStripeSubstrate

BaseSubstrate --> WedgeSubstrate
BaseSubstrate --> ContinuousGradientSubstrate


BaseGapSubstrate --> GapSubstrateBB
BaseGapSubstrate --> GapSubstrateBR
BaseGapSubstrate --> GapSubstrateRB
BaseGapSubstrate --> GapSubstrateRR
BaseGapSubstrate --> GapSubstrateInverted

BaseSubstrate --> BaseGapSubstrate


@enduml
